feat: implementation of i18n, PWA support, and UI animation overhaul
Internationalization (i18n): Added a new translation service with support for English, Spanish, and Portuguese. Implemented a language switcher in the Settings view that persists user preferences in local storage.
PWA Integration: Added
manifest.json
 and
sw.js
 for Progressive Web App support, allowing the application to be installed on mobile and desktop devices.
UI/UX Enhancement: Implemented staggered "slide-up" animations across the Home, Settings, and Categories views for a more immersive and premium feel. Refined glassmorphism effects and added micro-interactions (bounce/hover) to primary action buttons.
Structural Refactoring: Moved Markdown export/import operations from the Profile view to Settings to centralize data management tools.
Asset Optimization: Integrated PWA icon support and updated
index.html
 with relevant meta tags and service worker registration.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vitreon Notes</title>
+    <link rel="icon" href="/favicon.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
@@ -39,6 +40,15 @@
     <script type="module" src="/index.tsx"></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#6366f1" />
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js').catch(err => console.log('SW registration failed:', err));
+        });
+      }
+    </script>
   </head>
   <body
     class="antialiased overflow-hidden selection:bg-indigo-500 selection:text-white"
